# RustSlintFaena

./: .gitignore  Cargo.toml  README.md  aligned.apk.idsig  build-sign-install.bat  build.rs  build_app.bat  init.ps1  my-release-key.jks  signed.apk.idsig
android/: AndroidManifest.xml
android/src/main/: AndroidManifest.xml
apk_unpack/: AndroidManifest.xml  apktool.yml
apk_unpack/original/: AndroidManifest.xml
src/: entrar_sala.rs  guardado_local.rs  lib.rs  login.rs  main.rs  modelo.rs  registrar.rs
tools/overwrite_manifest/: Cargo.toml
tools/overwrite_manifest/src/: main.rs
ui/components/: boton-formulario.slint  boton-prinicipal.slint  boton-recycler-salas-admin.slint  boton-recycler-salas-miembro.slint  boton-recycler-salas.slint  boton-recycler-votaciones.slint  foco-invisible.slint  input-registro.slint  navbar.slint
ui/pages/: createRoom.slint  login.slint  main.slint  register.slint  startMenu.slint  visualizeRoomAdmin.slint  visualizeRoomMember.slint  welcome.slint
ui/styles/: styles.slint
