[package]
name = "slint_android_hello"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.3.2", features = ["backend-android-activity-06"] }

[build-dependencies]
slint-build = "1.3.2"

[package.metadata.android]
package = "com.example.slint"
label = "Slint Hello"
target-sdk-version = 30
min-sdk-version = 24
build-target = "aarch64-linux-android"
assets = "assets"

[package.metadata.android.signing.debug]
path = ".debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"