[package]
name = "Faena"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.3.2", features = ["backend-android-activity-06"] }
reqwest = { version = "0.11", default-features = false, features = ["json"] }
tokio ={ version = "1", features = ["full"]}
serde ={ version = "1.0", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
slint-build = "1.3.2"

[package.metadata.android]
package = "com.example.faena"
label = "FaenaJala"  # Usa el mismo nombre que en tu manifest
target-sdk-version = 30
min-sdk-version = 24
build-targets = ["aarch64-linux-android"]
assets = "assets"
resources = "android/res" 

[package.metadata.android.signing.debug]
path = ".debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"