[package]
name = "faena"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "faena"
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.3.2", features = ["backend-android-activity-06"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio ={ version = "1", features = ["full"]}
serde ={ version = "1.0", features = ["derive"]}
serde_json = "1.0"

[build-dependencies]
slint-build = "1.3.2"

[package.metadata.android]
manifest = "android/AndroidManifest.xml"

[package.metadata.android.signing.debug]
path = ".debug.keystore"
keystore_password = "android"
key_alias = "androiddebugkey"
key_password = "android"

[package.metadata.android.signing.release]
path = "my-release-key.jks"
keystore_password = "123456"
key_alias = "my-key-alias"
key_password = "123456"